Revision history for Template-Plugin-Digest-SHA1
================================================

        - new maintainer: BARBIE.
        - repackaged distribution.
        - added LICENSE file.
        - updated META.yml, added META.json.
        - added minimum perl version (5.006).

0.03    2006-04-26
        - Last release to CPAN by Andrew.